[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
known_first_party = ["api", "core", "customlists"]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
files = ["."]
no_implicit_reexport = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "alive_progress",
]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Download multipage OPDS2 feed into a single file."
name = "dowload-feed"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alive-progress = "^3.1.4"
pandas = "^2.0.3"
python = ">=3.9,<3.13"
requests = "^2.31.0"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pandas-stubs = "^2.0.2.230605"
pre-commit = "^3.2"
types-requests = "^2.31.0.2"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
